respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Supplier_Quote_Order_Fee_Line__c.object
<CustomObject>
    <fields>
        <fullName>Buy_Amount_header_currency__c</fullName>
        <formula>Supplier_Quote_Order_Buy_Amount__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Currency_Header__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Currency Header</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>% Discount</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Extension_Fee_Name__c</fullName>
        <label>Extension Service Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Category__c</fullName>
        <formula>TEXT(Fee_Name__r.Fee_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Service Rate Category&quot; inside &quot;Service Rate Name&quot;</inlineHelpText>
        <label>Service Rate Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Name__c</fullName>
        <label>Service Rate Name</label>
        <referenceTo>Fee__c</referenceTo>
        <relationshipName>Supplier_Quote_Order_Fee_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fee_Rate__c</fullName>
        <formula>Fee_Name__r.Fee_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Sell Rate&quot; inside &quot;Service Rate Name&quot;</inlineHelpText>
        <label>Sell Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Std_Profit__c</fullName>
        <formula>Sell_Amount__c - Supplier_Quote_Order_Buy_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Sell Amount&quot; - &quot;Buy Amount&quot;</inlineHelpText>
        <label>Service Std. Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>TEXT(Fee_Name__r.Rate_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As specified in &quot;Rate Type&quot; inside &quot;Service Rate Name&quot;</inlineHelpText>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Amount__c</fullName>
        <formula>Supplier_Quote_Order_Sell_Net_Price__c  *  Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Sell Net Price&quot; x &quot;Units&quot;</inlineHelpText>
        <label>Sell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sell_Amount_header_currency__c</fullName>
        <formula>Sell_Amount__c * Conversion_Rate_to_Currency_Header__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Amount (header currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Order_Buy_Amount__c</fullName>
        <formula>Supplier_Quote_Order_Buy_Price__c *  Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Buy Price&quot; x &quot;Units&quot;</inlineHelpText>
        <label>Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Order_Buy_Price__c</fullName>
        <label>Buy Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Order_Sell_Net_Price__c</fullName>
        <formula>Supplier_Quote_Order_Sell_Price__c  * (1-  Discount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Sell Price&quot; x (1 - &quot;% Discount&quot;)</inlineHelpText>
        <label>Sell Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Order_Sell_Price__c</fullName>
        <label>Sell Price</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Quote_Order__c</fullName>
        <label>Supplier Quote/Order</label>
        <referenceTo>Supplier_Quote__c</referenceTo>
        <relationshipName>Supplier_Quote_Order_Fee_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Until__c</fullName>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <label>Supplier Quote/Order Service Line</label>
    <nameField>
        <label>Service Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Quote/Order Service Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>